1.21.3以降に対応。看板の編集を防止